<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context=".Question">
<ScrollView
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/title1"
            android:textColor="@color/black_Accent"
            android:textSize="22sp"
            />
        <ImageView
            android:id="@+id/flag_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ukflag"
            />










        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black_Accent"
            android:textSize="18sp"
            android:text="@string/argentina"
            android:background="@drawable/button"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black_Accent"
            android:textSize="18sp"
            android:text="@string/australia"
            android:background="@drawable/button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black_Accent"
            android:textSize="18sp"
            android:text="@string/america"
            android:background="@drawable/button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black_Accent"
            android:textSize="18sp"
            android:text="@string/india"
            android:background="@drawable/button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black_Accent"
            android:textSize="18sp"
            android:text="@string/china"
            android:background="@drawable/button"  />


        <Button
            android:id="@+id/btn_submit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/submit"
            android:textSize="24sp"
              />

    </LinearLayout>



</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>